--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "compile": "yarn workspaces run compile",
     "test": "yarn workspaces run test",
     "deploy-imx": "cross-env NETWORK=immutableZkevmTestnet yarn zx v3-deploy.mjs",
-    "verify-imx": "cross-env NETWORK=immutableZkevmTestnet yarn zx v3-verify.mjs"
+    "deploy-sepolia": "cross-env NETWORK=sepolia yarn zx v3-deploy.mjs",
+    "verify-imx": "cross-env NETWORK=immutableZkevmTestnet yarn zx v3-verify.mjs",
+    "verify-sepolia": "cross-env NETWORK=sepolia yarn zx v3-verify.mjs"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
